--- a/pages/market.css
+++ b/pages/market.css
@@ -109,5 +109,5 @@
     color: white;
     font-family: "Jersey 10", sans-serif;
     box-shadow: 0 0 5px black;
-    background: linear-gradient(to right, aqua, blue);
+    background: linear-gradient(to right, black, black);
 }
