--- a/pages/market.css
+++ b/pages/market.css
@@ -54,6 +54,23 @@
     align-self: flex-end;
 }
 
+.search_titles {
+    width: 100%;
+    padding: 20px 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search {
+    width: 300px;
+    height: 35px;
+    box-shadow: 0 0 5px black;
+    padding: 0 10px;
+    border-radius: 20px;
+    font-weight: bold;
+}
+
 .main {
     width: 100%;
     min-height: 100vh;
