--- a/pages/market.css
+++ b/pages/market.css
@@ -9,6 +9,7 @@
 }
 
 .header {
+    position: relative;
     width: 100%;
     height: 400px;
     overflow: hidden;
@@ -16,8 +17,26 @@
 }
 
 .header_image {
+    position: absolute;
     width: 100%;
-    height: 100%;
+    height: 450%;
+}
+
+.header_title {
+    margin: 80px 0 0 0;
+    width: 100%;
+    font-family: "Jersey 10", sans-serif;  
+    font-size: 200px;
+    color: palevioletred;
+    letter-spacing: 8px;
+    text-shadow: 0 0 5px white;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: rotate(-10deg);
+    background-image: url();
+    background-size: 100% 100%;
 }
 
 .section {
